--- a/package.json
+++ b/package.json
@@ -9,14 +9,18 @@
     "prod:start": "node dist/index.js"
   },
   "dependencies": {
+    "@typegoose/typegoose": "^7.4.1",
     "@types/mongodb": "^3.5.29",
     "@types/mongoose": "^5.7.36",
     "apollo-server": "^2.18.2",
+    "class-validator": "^0.12.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "graphql": "^15.3.0",
     "mongodb": "^3.6.2",
-    "mongoose": "^5.10.9"
+    "mongoose": "^5.10.9",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
